recursion and binary search